# ntl-park-advisor

./: .gitignore  README.md  pyproject.toml
app/: server.py
app/chat/: chat.py  planning_chat.py
app/graph/: ask_internet_decision.py  build_graph.py  build_learning_graph.py  building_planning_graph.py  graph_learning_state.py  graph_planning_state.py  graph_state.py
app/llms/: llms.py
app/load_data/: load_and_process.py  webpages.py
app/retrievers/: ask_the_internet.py  get_video_classificiation_from_twelve.py  get_videos_from_twelve.py  vectorstore.py
app/retrievers/doc_store/: get_docs_from_vectorstore.py  learning_get_docs_from_vectorstore.py  planning_get_docs_from_vectorstore.py
app/utils/: consts.py
app/validate_docs/: validate_docs.py  validate_learning_docs.py  validate_planning_docs.py
backend/: vectorstore.py
backend/load_data/: load_and_process.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.tsx  index.css  learn.tsx  plan.tsx  sidebar.tsx  videoJS.tsx
