[tool.poetry]
name = "ntl-park-advisor"
version = "0.1.0"
description = "a national parks application"
authors = ["Sarah Kainec <Sarah.Kainec@focusedlabs.io>", "Lexie Marinelli <lexie.marinelli@focusedlabs.io>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "3.11.9"
langchain = "^0.2.12"
playwright = "^1.45.1"
html2text = "^2024.2.26"
langchain-community = "^0.2.11"
python-dotenv = "^1.0.1"
langchain-pinecone = "^0.1.3"
langchain-openai = "^0.1.20"
unstructured = "^0.15.0"
langchain-experimental = "^0.0.64"
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = ">=0.0.30"}
pydantic = "<2"


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
